# pynum

./: .gitignore  CMakeLists.txt  README.md  setup.py  test.py
pynum/: __init__.py  dtypes.pyi  vector.py
pynum/src/: dtypes.cpp
